2010-01-21  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Fixed spec to be more compatible with other
	RPM distros.

	* lib/PandoraFMS/NetworkServer.pm: Fixed ugly/noisy message "Use of
	uninitialized value $output in string eq at /usr/local/share/perl
	/5.10.0/PandoraFMS/NetworkServer.pm line 268".

2010-01-21	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Modified to unify create and update functions
	using optinal parameters as Ramon sugested. 

	* lib/PandoraFMS/DataServer.pm: Modified to ignore invalid positional data,
	use the unified functions from Core.pm, and store the agent_timestamp 
	modified by the agent_timezone.	

2010-01-20  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl: Fixed the script. Was not working.

2010-01-18	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Modified distance_moved function to calculate
	the distance using Havesine formula to take in account the earths curvature
	Modified update_agent_position to update also number_of_packages on 
	tgis_data

2010-01-15	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/DataServer.pm: Fixed a bug with
	some parameters called on wrong order, standarized the order of the 
	position parameters so always is longitude, latitude, altitude.

2010-01-15	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Modified to have different functions for the
	creation and update of the agent when it has position information, also
	added some auxiliary functions to store and update this position information.

	* lib/PandoraFMS/DataServer.pm: Modified to use the new functions to create
	and update the agent data adding also the position information.

	* lib/PandoraFMS/PluginServer.pm, lib/PandoraFMS/PredictionServer.pm,
	lib/PandoraFMS/NetworkServer.pm, lib/PandoraFMS/WMIServer.pm: Modified to use