@@ -233,3 +233,6 @@ max_queue_files 250
 # restart 0
 # restart_delay 60
 
+
+# Flag to activate GIS (positional infomration for agents and maps) by default it is desactivated
+# activate_gis 0
