@@ -185,6 +185,7 @@ sub pandora_load_config {
 	$pa_config->{"inventory_threads"} = 2; # 2.1
 	$pa_config->{"export_threads"} = 1; # 3.0
 	$pa_config->{"web_threads"} = 1; # 3.0
+	$pa_config->{"activate_gis"} = 0; # 3.1
 
 	$pa_config->{"max_queue_files"} = 250; 
 
@@ -509,6 +510,9 @@ sub pandora_load_config {
 		}
 		elsif ($parametro =~ m/^restart\s+([0-1])/i) {
 			$pa_config->{'restart'} = clean_blank($1);
+		}
+		elsif ($parametro =~ m/^activate_gis\s+([0-1])/i) {
+			$pa_config->{'activate_gis'} = clean_blank($1);
 		}
 	} # end of loop for parameter #
 
